# engine-sim-bridge

./: .axxtermcolors  .gitignore  .gitmodules  Brewfile  CMakeLists.txt  MEMORY.md  Makefile  README.md  gearbox_accel_diagnostic.csv  sonar-cfamily-taint-analysis-reproducer.tar.xz  sonar-project.properties
.claude/memory/: INTERFACE_CONTRACTS.md  MEMORY.md  PR_CHECKLIST.md  TEST_STRATEGY.md
.github/workflows/: ci.yml  codeql.yml  sonarcloud.yml
.scannerwork/: report-task.txt
docs/: preset-codegen-design.md
docs/architecture/: VirtualICE-Twin-Architecture-Plan.md  architecture-decisions.md  component-diagram.md  critic-review-phase1-implementation.md  gearbox-data-model-redesign.md  phase1-acceptance-criteria.md  phase2-acceptance-criteria.md  physics-specialist-analysis.md  preset-factory-redesign-plan.md  shift-execution-research.md  torque-display-analysis.md  x-engineer-ch4-transmission-model.md  x-engineer-ch5-vehicle-model.md  x-engineer-ch6-tcu-controller.md  x-engineer-ch7-simulation-results.md  zf-8hp45-shift-data-research.md  zf-shift-scheduling-research.md  zf-torque-aware-shifting-analysis.md
docs/archive/: SYNTHESIZER_DOUBLE_INIT_LEAK.md  critic-review-phase1-planning.md  project-briefing.md  solution-architecture-proposal.md  web-research-report.md
es/: 06_subaru_ej25.mr  11_merlin_v12.mr  C63_M156.mr  C63_M156_V2.mr  spike_ferrari_f136.mr  spike_subaru.mr  test_simple.mr
es/objects/: objects.mr
include/: AudioLoopConfig.h  BridgeSimulator.h  CoreAudioHardwareProvider.h  Diagnostics.h  EngineConfig.h  IAudioHardwareProvider.h  IAudioStrategy.h  IInputProvider.h  ILogging.h  IPresentation.h  ISimulator.h  ITelemetryProvider.h  SimulationLoop.h  SyncPullStrategy.h  ThreadedStrategy.h  engine_sim_application.h  engine_sim_bridge.h  info_cluster.h  mock_engine_sim.h  mock_engine_sim_internal.h  sine_wave_simulator.h
include/common/: CircularBuffer.h  ILogging.h  JsonParser.h  JsonWriter.h  PathNormalizer.h  PresetExceptions.h  PresetSerializer.h  RelaxedAtomic.h  Verification.h  wav_loader.h
include/config/: BridgeAppConfig.h  CLIConfig.h  CLIFactory.h
include/hardware/: AVAudioEngineHardwareProvider.h  AudioTypes.h  CoreAudioHardwareProvider.h  ESP32I2SHardwareProvider.h  IAudioHardwareProvider.h  NullAudioHardwareProvider.h
include/input/: BrakeInput.h  CsvTelemetryParser.h  DemoControlsTarget.h  DemoInputProvider.h  DemoThrottleSource.h  DemoVehiclePhysics.h  EngineInputTarget.h  GearSelectorInput.h  IDemoControls.h  IDemoSpeedEnhancer.h  IKeyActionTarget.h  IKeyboardInput.h  IReplayTimeline.h  IThrottleSource.h  IgnitionInput.h  KeyHoldBridge.h  KeyboardDemoThrottleSource.h  KeyboardInputProvider.h  LiveTelemetryProvider.h  ManualTwinProvider.h  ReplayTelemetryProvider.h  VirtualIceInputProvider.h
include/io/: IInputProvider.h  IPresentation.h  LiveTelemetryParser.h  ThrottleDecay.h  UpstreamSignal.h
include/preset/: CamshaftDeserializer.h  ConnectingRodDeserializer.h  CrankshaftDeserializer.h  CylinderBankDeserializer.h  CylinderHeadDeserializer.h  EngineDeserializer.h  ExhaustSystemDeserializer.h  FuelDeserializer.h  FunctionDeserializer.h  IgnitionModuleDeserializer.h  IntakeDeserializer.h  PresetDeserializer.h  TransmissionDeserializer.h  VehicleDeserializer.h
include/session/: ISimulatorSession.h
include/simulation/: CrankingController.h  EnginePhase.h  ILoopClock.h  PresentationStateBuilders.h  SimulationLoop.h  audioRenderCallback.h
include/simulator/: BrakeConstraint.h  BridgeSimulator.h  EngineConfig.h  EnginePresets.h  EnginePresetsHelper.h  EngineSimTypes.h  GearConventions.h  ICombustionEngine.h  ISimulator.h  PresetEngineFactory.h  ScriptCompileHelpers.h  ScriptExecutionHelpers.h  ScriptLoadHelpers.h  SimulatorBase.h  SimulatorFactory.h  SimulatorInitHelpers.h  SineEngine.h  SineSimulator.h  SineTransmission.h  SineVehicle.h  engine_sim_bridge.h  engine_sim_loader.h  sine_wave_simulator.h
include/strategy/: AudioLoopConfig.h  AudioState.h  Diagnostics.h  IAudioBuffer.h  IAudioStrategy.h  SyncPullStrategy.h  ThreadedStrategy.h
include/telemetry/: ITelemetryProvider.h  NullTelemetryWriter.h
include/twin/: AutomaticGearbox.h  GearboxCsvLogger.h  GearboxLogEntry.h  IGearboxLogger.h  IVehicleTwin.h  IceVehicleProfile.h  ManualTwin.h  SlipLockController.h  SpeedRpmConversion.h  ThrottleSmoother.h  TorqueConverterPhysics.h  TwinOutput.h  VirtualIceTwin.h
scripts/: build_summary.py  coverage_block.py  coverage_summary.py  lcov_to_xml.py  run_coverage_tests.sh  sonar_summary.py
spikes/: audio_sweep_spike  clutch_sweep_spike  dyno_launch_control_spike  dyno_tracking_spike  jitter_test_spike  real_engine_audio_spike
src/: BridgeSimulator.cpp  CircularBuffer.cpp  ConsoleLogger.cpp  CoreAudioHardwareProvider.cpp  EngineConfig.cpp  IAudioStrategyFactory.cpp  InMemoryTelemetry.cpp  SimulationLoop.cpp  SyncPullStrategy.cpp  ThreadedStrategy.cpp  engine_sim_bridge.cpp  engine_sim_bridge_stub.cpp  info_cluster.cpp  mock_engine_sim.cpp  mock_engine_sim_fixed.cpp  mock_engine_sim_fixed_v2.cpp  mock_simple.cpp  mock_wrapper.cpp  sine_wave_simulator.cpp
src/common/: CircularBuffer.cpp  ConsoleLogger.cpp  JsonParser.cpp  PresetSerializer.cpp  RelaxedAtomic.cpp
src/hardware/: AVAudioEngineHardwareProvider.mm  AudioHardwareProviderFactory.cpp  AudioHardwareProviderFactory.mm  CoreAudioHardwareProvider.cpp  ESP32I2SHardwareProvider.cpp  (+1 more)
test/: BridgeSimulatorContractTests.cpp  BridgeUnitTests.cpp  CrankingControllerStoppingTests.cpp  CrankingControllerTests.cpp  GearClutchBugTest.cpp  GearRefactorTest.cpp  InMemoryTelemetryResetTests.cpp  IntakeDeserializerTests.cpp  IntegrationAudioPlayerTest.cpp  JsonParserTests.cpp  PathNormalizerTests.cpp  PresetEngineFactoryTests.cpp  PresetEngineTests.cpp  PresetFuelTurbulenceTest.cpp  PresetIsomorphismTests.cpp  ScriptLoadHelpersResolveAssetBasePathTests.cpp  SimulatorFactoryBoundaryTests.cpp  SimulatorFactoryPresetDiscoveryTests.cpp  SineWaveRegressionTests.cpp  SyncPullStrategyContractTests.cpp  TestPathHelpers.h  iOSAdapterTests.cpp
tools/: preset_codegen.cpp  preset_compiler.cpp
(+131 files in other folders)
